# mcp-uofx

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-TW.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  close-pull-requests.yml  publish.yml
docs/: architecture.md  configuration.md  manual-tests.md  tools.md
examples/: claude_desktop_config.json  vscode_mcp.json
src/mcp_uofx/: __init__.py  api_client.py  auth.py  login.py  server.py  sse_server.py
src/mcp_uofx/tools/: agent.py  bpm.py  dms.py  iso.py  notification.py  org.py  punch.py  questionnaire.py
tests/: test_imports.py
tests/manual/: test_agent_scenarios.py  test_all_tools.py  test_innovative_scenarios.py  test_mcp_protocol.py  test_raw_apis.py  test_sse_client.py  verify_all.py  verify_api_key.py  verify_crud.py  verify_readme_claims.py
