[project]
name = "mcp-uofx"
version = "0.1.1"
description = "Custom MCP server for UOF X Total Solution"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "mcp-uofx contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastmcp>=0.1.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "sse-starlette>=3.4.4",
]

[project.urls]
Homepage = "https://github.com/asgard-ai-platform/mcp-uofx"
Repository = "https://github.com/asgard-ai-platform/mcp-uofx"
Issues = "https://github.com/asgard-ai-platform/mcp-uofx/issues"

[project.scripts]
mcp-uofx = "mcp_uofx.server:main"
mcp-uofx-sse = "mcp_uofx.sse_server:main"
mcp-uofx-login = "mcp_uofx.login:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_uofx"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/docs/internal",
]
